--- a/requirements_rpi_39_bak.txt
+++ b/requirements_rpi_39_bak.txt
@@ -1,13 +1,13 @@
 bleak==0.20.2
-boto3
+boto3==1.26.69
 cacheout==0.14.1
 GitPython==3.1.30
-h5py
+h5py==3.8.0
 humanize==4.6.0
 iso8601==1.1.0
-matplotlib
-numpy
-pandas
+matplotlib==3.6.3
+numpy==1.24.2
+pandas==1.5.3
 psutil==5.8.0
 pytz==2022.7.1
 pyudev==0.24.0
