--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ dds/macs/orange/
 !tests/00-00-00-00-00-00/*
 !tests/11-22-33-44-55-66/*
 !tests/99-99-99-99-99-99/*
+!tests/55-55-55-55-55-55/*
 
 
 
