--- a/settings/config.toml
+++ b/settings/config.toml
@@ -1,29 +1,36 @@
-# old file run_ddh.sh
 [credentials]
 cred_aws_bucket = ""
 cred_aws_key_id = ""
 cred_aws_secret = ""
 cred_aws_sqs_queue_name = "ddw_in.fifo"
-cred_ddh_serial_number = ""
+cred_ddh_serial_number = "9999999"
 cred_ddh_project_name = "lab"
-# next 2 only used when SQS and S3 need different keys
 cred_aws_custom_sqs_key_id = ""
 cred_aws_custom_sqs_access_key = ""
 
-# old file ddh.json
 [behavior]
-    ship_name = "FV_DDH_401"
-    forget_time = 86400
-    app_type = "trawling"
-    moving_speed = [0.5, 7.0]
-    monitored_macs = {
-        11-22-33-44-55-66 = 1234567
-    }
+ship_name = "FV_DDH_401"
+forget_time = 86400
+gear_type = 1
+moving_speed = [ 0.5, 7.0,]
+ddh_version = "3.6.00"
 
-# li_all_macs.yml
-# ctx.py
-# recipe_cc26x2r.json
-# ddh version
+[monitored_macs]
+11-22-33-44-55-66 = "1234567"
 
-# src: https://www.geeksforgeeks.org/read-and-write-toml-files-using-python/
+[all_macs]
+11-22-33-44-55-66 = "1234567"
 
+[flags]
+aws_en = 1
+sqs_en = 1
+ble_en = 1
+rbl_en = 0
+g_gps_is_external = 0
+sms_en = 0
+hook_graph_test_mode = 0
+hook_gps_error_measurement_forced = 0
+hook_ble_purge_black_macs_on_boot = 0
+hook_ble_purge_this_mac_dl_files_folder = 0
+hook_ble_scan_cc26x2r_sim = 0
+rerun_logger = 0
