--- a/settings/config.toml
+++ b/settings/config.toml
@@ -16,12 +16,13 @@ moving_speed = [ 0.5, 7.0,]
 ddh_version = "3.6.00"
 
 [monitored_macs]
-11-22-33-44-55-66 = "1234567"
-99-88-77-66-55-44 = "9876543"
+"d0:2e:ab:d9:29:48" = "bread12"
+"11:22:33:44:55:66" = "1234567"
+"99:88:77:66:55:44" = "9876543"
 
 [all_macs]
-11-22-33-44-55-66 = "1234567"
-99-88-77-66-55-44 = "9876543"
+"11:22:33:44:55:66" = "1234567"
+"99:88:77:66:55:44" = "9876543"
 
 [flags]
 aws_en = 1
