--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@ logs/*
 !lef/.gitkeep
 !sqs/.gitkeep
 db_his.json*
-*.db
-_macs_to_sn.*
 .idea/
 *.so
 *.lid
@@ -19,10 +17,10 @@ _macs_to_sn.*
 *.rbl
 # just in case there are more dl_files here
 dds/dl_files/
-bleak_moana.py
 dds/macs/black/
 dds/macs/orange/
 .ruff_cache/
+settings/config.toml
 
 # so test graph files are copied
 !tests/*
