--- a/requirements_rpi_39.txt
+++ b/requirements_rpi_39.txt
@@ -1,18 +1,2 @@
-bleak==0.20.2
-boto3==1.26.69
-cacheout==0.14.1
-GitPython==3.1.30
-h5py==3.8.0
-humanize==4.6.0
-iso8601==1.1.0
-numpy==1.24.2
-pandas==1.5.3
-psutil==5.8.0
-pytz==2022.7.1
-pyudev==0.24.0
-tzdata==2022.7
-tzlocal==4.2
-setproctitle==1.3.2
-ieee754==0.2
-pyqtgraph==0.13.3
-pysondb==1.6.7
+install the ones in dev and write down versions here
+
