--- a/settings/config.toml
+++ b/settings/config.toml
@@ -3,7 +3,7 @@ cred_aws_bucket = ""
 cred_aws_key_id = ""
 cred_aws_secret = ""
 cred_aws_sqs_queue_name = "ddw_in.fifo"
-cred_ddh_serial_number = "9999999"
+cred_ddh_serial_number = ""
 cred_ddh_project_name = "lab"
 cred_aws_custom_sqs_key_id = ""
 cred_aws_custom_sqs_access_key = ""
