--- a/settings/config.toml
+++ b/settings/config.toml
@@ -1,9 +1,10 @@
 [credentials]
-cred_aws_bucket = ""
-cred_aws_key_id = ""
-cred_aws_secret = ""
+# new configuration single file
+cred_aws_bucket = "bkt-kaz"
+cred_aws_key_id = "AKIA2SU3QQX6Z4TX4VO3"
+cred_aws_secret = "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"
 cred_aws_sqs_queue_name = "ddw_in.fifo"
-cred_ddh_serial_number = ""
+cred_ddh_serial_number = "9999999"
 cred_ddh_project_name = "lab"
 cred_aws_custom_sqs_key_id = ""
 cred_aws_custom_sqs_access_key = ""
@@ -11,7 +12,7 @@ cred_aws_custom_sqs_access_key = ""
 [behavior]
 ship_name = "FV_DDH_401"
 forget_time = 36000
-gear_type = 0
+gear_type = 1
 moving_speed = [ 0.5, 7.0,]
 fake_gps_position = [ 11.0, -83.0,]
 
