--- a/settings/config.toml
+++ b/settings/config.toml
@@ -5,13 +5,13 @@ cred_aws_key_id = "AKIA2SU3QQX6Z4TX4VO3"
 cred_aws_secret = "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"
 cred_aws_sqs_queue_name = "ddw_in.fifo"
 cred_ddh_serial_number = "9999999"
-cred_ddh_project_name = "lab"
+cred_ddh_project_name = "kaz"
 cred_aws_custom_sqs_key_id = ""
 cred_aws_custom_sqs_access_key = ""
 
 [behavior]
 ship_name = "FV_DDH_401"
-forget_time = 36000
+forget_time = 3600
 gear_type = 1
 moving_speed = [ 0.5, 7.0,]
 fake_gps_position = [ 11.0, -83.0,]
