--- a/settings/config.toml
+++ b/settings/config.toml
@@ -18,7 +18,8 @@ moving_speed = [ 0.5, 7.0,]
 fake_gps_position = [ 11.0, -83.0,]
 
 [monitored_macs]
-"11:22:33:44:55:66" = "1234567"
+# example
+# "11:22:33:44:55:66" = "1234567"
 
 [all_macs]
 "11:22:33:44:55:66" = "1234567"
