--- a/settings/config.toml
+++ b/settings/config.toml
@@ -2,9 +2,9 @@
 cred_aws_bucket = ""
 cred_aws_key_id = ""
 cred_aws_secret = ""
-cred_aws_sqs_queue_name = ""
+cred_aws_sqs_queue_name = "ddw_in.fifo"
 cred_ddh_serial_number = "9999999"
-cred_ddh_project_name = "lab"
+cred_ddh_project_name = "kaz"
 cred_aws_custom_sqs_key_id = ""
 cred_aws_custom_sqs_access_key = ""
 
