--- a/settings/config.toml
+++ b/settings/config.toml
@@ -17,6 +17,7 @@ fake_gps_position = [ 11.0, -83.0,]
 
 [monitored_macs]
 "60:77:71:22:CA:6A" = "1000000"
+"D0:2E:AB:D9:29:48" = "bread"
 
 [flags]
 aws_en = 1
