--- a/settings/config.toml
+++ b/settings/config.toml
@@ -8,27 +8,32 @@ cred_ddh_project_name = "kaz"
 cred_aws_custom_sqs_key_id = ""
 cred_aws_custom_sqs_access_key = ""
 
+
+
 [behavior]
 ship_name = "nameofboat"
 forget_time = 36000
 gear_type = 0
 moving_speed = [ 0.5, 7.0,]
+# works altogether w/ GPS_DUMMY_MODE_FILE
 fake_gps_position = [ 11.0, -83.0,]
+
+
 
 [monitored_macs]
 "60:77:71:22:CA:6A" = "1000000"
 "D0:2E:AB:D9:29:48" = "bread"
 
+
+
 [flags]
+# administrator flags
 aws_en = 1
 sqs_en = 1
 ble_en = 1
 rbl_en = 0
 maps_en = 1
-g_gps_is_external = 0
 sms_en = 0
-hook_graph_test_mode = 1
 hook_gps_error_measurement_forced = 0
 hook_ble_purge_black_macs_on_boot = 0
 hook_ble_purge_this_mac_dl_files_folder = 0
-hook_ble_scan_cc26x2r_sim = 0
