--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,7 +1,7 @@
-uvicorn
-fastapi
-python-multipart
-setproctitle
-pyserial
-toml
-GitPython
+uvicorn~=0.28.0
+fastapi~=0.110.0
+python-multipart~=0.0.9
+setproctitle~=1.3.3
+pyserial~=3.5
+toml~=0.10.2
+GitPython~=3.1.42
