--- a/settings/config.toml
+++ b/settings/config.toml
@@ -25,6 +25,7 @@ ble_en = 1
 rbl_en = 0
 maps_en = 1
 sms_en = 0
+skip_dl_in_port_en = 0
 hook_gps_error_measurement_forced = 0
 hook_ble_purge_black_macs_on_boot = 0
 hook_ble_purge_this_mac_dl_files_folder = 0
