--- a/settings/all_macs.toml
+++ b/settings/all_macs.toml
@@ -1,2 +1,2 @@
-# entry example, do not uncomment or erase
- "11:22:33:44:55:66" = "sn1234567"
+# "11:22:33:44:55:66" = "sn1234567" --> entry example, do not uncomment or erase
+
