--- a/requirements_p3_2023_32b.txt
+++ b/requirements_p3_2023_32b.txt
@@ -1,7 +1,7 @@
 pyqtgraph~=0.13.3
 setproctitle~=1.3.3
 pandas~=2.2.0
-pysondb~=1.6.7
+strip.pysondb~=1.5.1
 GitPython~=3.1.41
 cacheout~=0.16.0
 tzlocal~=5.2
