--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 dl_files/*
 logs/*
+gpq_files/*
 .idea/
 
 
@@ -24,7 +25,6 @@ ddh/gui/res/*_C.gif
 
 # just in case there are more dl_files here
 dds/dl_files/
-dds/gpq_files/
 dds/macs/black/
 dds/macs/orange/
 .ruff_cache/
