--- a/settings/config_template.toml
+++ b/settings/config_template.toml
@@ -21,13 +21,21 @@ fake_gps_position = [ 41.63, -70.91,]
 
 
 [flags]
+# upload of files to AWS
 aws_en = 1
+# notifications, e-mails, etc.
 sqs_en = 1
+# Bluetooth
 ble_en = 1
-gpq_en = 0
+# generation of CST (CSV + tracking) combo files
+gpq_en = 1
+# bottom temperature maps
 maps_en = 0
+# support SMS
 sms_en = 0
+# download loggers when in port (0) or skip (1)
 skip_dl_in_port_en = 1
+# debug flags
 hook_gps_error_measurement_forced = 0
 hook_ble_purge_black_macs_on_boot = 0
 hook_ble_purge_this_mac_dl_files_folder = 0
