--- a/settings/config.toml
+++ b/settings/config.toml
@@ -1,33 +1,1 @@
-[credentials]
-cred_aws_bucket = "bkt-kaz"
-cred_aws_key_id = ""
-cred_aws_secret = ""
-cred_aws_sqs_queue_name = "ddw_in.fifo"
-cred_ddh_serial_number = "9999999"
-cred_ddh_project_name = "kaz"
-cred_aws_custom_sqs_key_id = ""
-cred_aws_custom_sqs_access_key = ""
-
-[behavior]
-ship_name = "ship_name"
-forget_time = 86400
-gear_type = 0
-moving_speed = [ 0.5, 7.0,]
-fake_gps_position = [ 11.0, -83.0,]
-
-[monitored_macs]
-"D0:2E:AB:D9:29:48" = "1234567"
-
-
-[flags]
-aws_en = 1
-sqs_en = 1
-ble_en = 1
-rbl_en = 0
-g_gps_is_external = 0
-sms_en = 0
-hook_graph_test_mode = 0
-hook_gps_error_measurement_forced = 0
-hook_ble_purge_black_macs_on_boot = 0
-hook_ble_purge_this_mac_dl_files_folder = 0
-hook_ble_scan_cc26x2r_sim = 0
+# this is only used in latest DDH version, not this yellow boat one
