--- a/settings/all_macs.toml
+++ b/settings/all_macs.toml
@@ -1,3 +1,2 @@
-# "11:22:33:44:55:66" = "sn1234567" --> entry example, do not uncomment or erase
-"D0:2E:AB:D9:29:48" = "1234567"
-"D0:2E:AB:D8:AB:3E" = "2405764"
+# MAC entry example, mind the quotes, do not erase
+# "11:22:33:44:55:66" = "sn1234567"
