--- a/settings/all_macs.toml
+++ b/settings/all_macs.toml
@@ -1,8 +1,4 @@
 # MAC entry example, mind the quotes, do not erase
 # "11:22:33:44:55:66" = "sn1234567"
-"11:22:33:44:55:66" = "sn1234567"
-"77:77:77:77:77:77" = "sn7777777"
-"aa:bb:cc:dd:ee:ee" = "snaaaaaaa"
-"D0:2E:AB:D8:AB:3E" = "0000000"
-"D0:2E:AB:D9:29:48" = "3333333"
-"F0:5E:CD:25:9D:D2" = "2405501"
+# keep this entry, it is the logger we us in our BLE range tool
+"D0:2E:AB:D9:30:1E" = "1212121"
