--- a/settings/config_template.toml
+++ b/settings/config_template.toml
@@ -42,3 +42,7 @@ skip_dl_in_port_en = 0
 hook_gps_error_measurement_forced = 0
 hook_ble_purge_black_macs_on_boot = 0
 hook_ble_purge_this_mac_dl_files_folder = 0
+
+
+[experimental]
+use_lsb_for_tdo_loggers = 0
