--- a/requirements_extra.txt
+++ b/requirements_extra.txt
@@ -1,3 +1,3 @@
 # for BRT tool
 simplepyble~=0.7.3
-git+https://github.com/LowellInstruments/lsb.git
+git@https://github.com/LowellInstruments/lsb.git
