--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ bullet~=2.2.0
 toml~=0.10.2
 py_cui~=0.1.6
 pyserial~=3.5b0
-
+simplepyble~=0.7.3
+lsb@git+https://github.com/LowellInstruments/lsb.git
