--- a/settings/config_template.toml
+++ b/settings/config_template.toml
@@ -48,3 +48,4 @@ hook_ble_purge_this_mac_dl_files_folder = 0
 # KEEP these as = 0 when not sure
 use_lsb_for_tdo_loggers = 0
 use_lsb_for_dox_loggers = 0
+del_ble_cache = 0
