--- a/settings/config_template.toml
+++ b/settings/config_template.toml
@@ -50,5 +50,6 @@ use_lsb_for_tdo_loggers = 0
 use_lsb_for_dox_loggers = 0
 del_ble_cache = 0
 use_aws_cp = 0
+use_ble_passive_scanning = 0
 
 # not implemented yet, some ideas
