--- a/settings/config_template.toml
+++ b/settings/config_template.toml
@@ -58,4 +58,4 @@ ble_do_crc = 0
 ble_del_cache = 0
 # conf_dox can be 60, 300, 900
 # conf_dox = 900
-use_smart_lock_out_time = 0
+use_smart_lockout = 0
